Add support for request examples in the API documentation
